--- a/src/pages/detail/detail.scss
+++ b/src/pages/detail/detail.scss
@@ -152,6 +152,15 @@
     &-title{
       font-size: 2rem;
       margin: 1rem 0;
+      @include maxW($mobile){
+        font-size: 1rem;
+      }
+    }
+  }
+  & .movie{
+    padding: 2rem;
+    & .movie__list {
+      margin: 0;
     }
   }
 }
